<resources>
    <string name="app_name">ProyectoPDM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_contenedor_instrucciones">ContenedorInstrucciones</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello from section : %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tv_name_cb">Carlos Beltrán</string>
    <string name="tv_name_rc">Roxana Cortéz</string>
    <string name="tv_name_xf">Xavier Figueroa</string>
    <string name="tv_github_cb">CarlosBeltranP</string>
    <string name="tv_github_xf">Xavizardon</string>
    <string name="tv_github_rc">RoxanaCortez</string>
    <string name="tv_mail_xf">xavi_figso@hotmail.com</string>

    //Frutas
    <string name="manzana">MAN__NA</string>
    <string name="aguacate">AGUA__TE</string>
    <string name="banana">__NANA</string>
    <string name="arandano">A___DANO</string>
    <string name="brocoli">___COLI</string>
    <string name="zanahoria">ZANA__RIA</string>
    <string name="cereza">__REZA</string>
    <string name="elote">_LOTE</string>
    <string name="uvas">U___</string>
    <string name="limon">LI___</string>
    <string name="lechuga">LE___GA</string>
    <string name="mango">___GO</string>
    <string name="hongos">___GOS</string>
    <string name="naranja">__RANJA</string>
    <string name="sandia">SAN__A</string>
    <string name="tomate">__MATE</string>
    <string name="fresas">FRE___</string>
    <string name="papa">PA__</string>
    <string name="piña">PI__</string>
    <string name="tv_inicio_about">Acerca de</string>
</resources>
