<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_bluelight"
    android:layout_height="match_parent"

    tools:context=".Fragments.About">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:fontFamily="@font/bree_serif"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:text="Desarrollado por:"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/medium_margin"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="4dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/roxy_icon"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_margin"
                    android:layout_margin="@dimen/small_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/tv_name_rc"
                        android:fontFamily="@font/bree_serif"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/tv_github_rc"
                        android:fontFamily="@font/bree_serif"
                        android:textColor="@color/darkgray"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:drawableStart="@drawable/github_icon"
                        android:drawablePadding="@dimen/small_margin"
                        android:drawableLeft="@drawable/github_icon"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkgray"
                        android:fontFamily="@font/bree_serif"
                        android:text="roxana.poncita@gmail.com"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:drawableLeft="@drawable/gmail_icon"
                        android:drawablePadding="@dimen/small_margin"
                        android:textSize="12sp"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="4dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/carlos_icon"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_margin"
                    android:layout_margin="@dimen/small_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/tv_name_cb"
                        android:fontFamily="@font/bree_serif"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/tv_github_cb"
                        android:drawableLeft="@drawable/github_icon"
                        android:gravity="center"
                        android:drawablePadding="@dimen/small_margin"
                        android:textAlignment="center"
                        android:fontFamily="@font/bree_serif"
                        android:textColor="@color/darkgray"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkgray"
                        android:text="carlos.ebponce@gmail.com"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:drawableLeft="@drawable/gmail_icon"
                        android:drawablePadding="@dimen/small_margin"
                        android:fontFamily="@font/bree_serif"
                        android:textSize="12sp"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="4dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/xavi_icon"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/medium_margin"
                    android:layout_margin="@dimen/small_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/tv_name_xf"
                        android:fontFamily="@font/bree_serif"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/tv_github_xf"
                        android:drawableLeft="@drawable/github_icon"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:drawablePadding="@dimen/small_margin"
                        android:fontFamily="@font/bree_serif"
                        android:textColor="@color/darkgray"
                        android:textSize="12sp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/darkgray"
                        android:fontFamily="@font/bree_serif"
                        android:drawablePadding="@dimen/small_margin"
                        android:drawableLeft="@drawable/gmail_icon"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/tv_mail_xf"
                        android:textSize="12sp"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:fontFamily="@font/bree_serif"
                android:text="La motivación de esta app fue por realizar un proyecto de la materia 'Programación de dispositivos móviles' impartida en la Universidad Centroamericana 'José Simeón Cañas' UCA. "
                android:textColor="@color/darkgray"
                android:textSize="14sp" />

            <ScrollView
                android:id="@+id/SCROLLER_ID"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:fillViewport="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:layout_margin="@dimen/medium_margim"
                android:fontFamily="@font/bree_serif"
                android:text="Créditos extras"
                android:textColor="@color/darkgray"
                android:textSize="14sp" />
            </ScrollView>


            <Button
                android:id="@+id/btn_inicio"
                android:layout_width="150dp"
                android:background="@drawable/rounded_shape_bluelight"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bree_serif"
                android:layout_marginTop="80dp"
                android:layout_gravity="center"
                android:gravity="left|center"
                android:drawableLeft="@drawable/home2_icon"
                android:paddingLeft="10dp"
                android:drawablePadding="@dimen/medium_margim"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:text="Inicio"/>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>